...
function TabNavigator({ navigation }) {
  const [showCreatePopup, setShowCreatePopup] = useState(false);

  return (
    <>
      <Tab.Navigator tabBar={(props) => <BottomNav {...props} onCreatePress={() => setShowCreatePopup(true)} />} screenOptions={{ headerShown: false }}>
        <Tab.Screen name="Home" component={FeedScreen} />
        <Tab.Screen name="Peaks" component={PeaksFeedScreen} />
        <Tab.Screen name="CreateTab" component={CreatePostScreen} />
        <Tab.Screen name="Notifications" component={NotificationsScreen} />
        <Tab.Screen name="Profile" component={ProfileScreen} />
      </Tab.Navigator>

...
